--- a/main.tex
+++ b/main.tex
@@ -64,15 +64,16 @@
 \titlehead{Master of Science in Engineering with Specialisation in Data Science}
 
 \subject{Master Thesis}
-\title[Deep-Learning-based Pattern Recognition and the Principle of Self Organisation]{
-    Deep-Learning-based Pattern Recognition and the Principle of Self Organisation
+\title[Deep Learning-based Pattern Recognition and the Principle of Self-Organisation]{
+    Deep Learning-based Pattern Recognition and the Principle of Self-Organisation
 }
 \subtitle{Incorporating Findings from Neuroscience about Natural Intelligence into Modern Deep Learning Architectures}
 
-\author[Pascal Sager]{Pascal Sager}
+\author[Pascal Sager]{{\small written by}\\Pascal Sager\\[1ex]  {\small supervised by}\\{\large Prof. Dr. Thilo Stadelmann}\\{\large Dr. Jan Milan Deriu}\\{\large Prof. Dr. Christoph von der Malsburg}\\[4ex]}
+
 \date{\today}
 
-\publishers{Zurich University of Applied Sciences}
+\publishers{Zurich University of Applied Sciences\\Centre for Artificial intelligence}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \frontmatter
