--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,6 +1,6 @@
 %% future_work.tex
 
-Deep learning is far from being a system with human-like intelligence. Consequently, there is a massive amount of work to be done in the future to get closer to this ultimate goal\sidenote{while the goal should still be to build a system that supports humans and not behaves like one}. However, the implementations presented in this thesis are far from such a system. Consequently, a conclusion is drawn, and the next steps are proposed for the models presented in this thesis, but a long-term vision is presented as well. Specifically, some insights are given to the neuroscientific concept that seems very promising in section \secref{future_neuro_concepts}, and future work is described for vertical self-organisation in \secref{future_vso} as well as for horizontal self-organisation in \secref{future_hso}. Afterwards, in \secref{future_3_stage}, a new model is presented on a very abstract level, which could work better intuitively, but a concrete implementation is unclear. In \secref{useful_representations}, the usefulness of representations is discussed. In the last \secref{cognition_reasoning}, the author gives a personal opinion about the future of AI, which is not supported by scientific arguments but might be interesting for (motivated) readers.
+Deep learning is far from being a system with human-like intelligence. Consequently, there is a massive amount of work to be done in the future to get closer to this ultimate goal (while the goal should still be to build a system that supports humans and not behaves like one). However, the implementations presented in this thesis are far from such a system. Consequently, a conclusion is drawn, and the next steps are proposed for the models presented in this thesis, but a long-term vision is presented as well. Specifically, some insights are given to the neuroscientific concept that seems very promising in section \secref{future_neuro_concepts}, and future work is described for vertical self-organisation in \secref{future_vso} as well as for horizontal self-organisation in \secref{future_hso}. Afterwards, in \secref{future_3_stage}, a new model is presented on a very abstract level, which could work better intuitively, but a concrete implementation is unclear. In \secref{useful_representations}, the usefulness of representations is discussed. In the last \secref{cognition_reasoning}, the author gives a personal opinion about the future of AI, which is not supported by scientific arguments but might be interesting for (motivated) readers.
 
 
 
@@ -21,19 +21,19 @@ TODO: this section is not yet complete as many experiments are still ongoing...
 
 
 Vertical self-organisation optimises a model layer-wise by minimising proxy objective functions.
-For classification, a sample is compared to the average activation of each class. This average activation can be understood as an object prototype within a world model. Thus, it is compared to which prototype a sample fits best. The problem is that a single object prototype is not sufficient. As an example, \figref{digit_4_versions} shows different versions of the digit $4$ that can be found in the MNIST data set. This shows that a digit can be written in different ways\sidenote{this applies to all kinds of data sets: Most objects can have various visual characteristics (size, colour, shape) or look different from different viewpoints}.
+For classification, a sample is compared to the average activation of each class. This average activation can be understood as an object prototype within a world model. Thus, it is compared to which prototype a sample fits best. The problem is that a single object prototype is not sufficient. As an example, \figref{digit_4_versions} shows different versions of the digit $4$ that can be found in the MNIST dataset. This shows that a digit can be written in different ways\sidenote{this applies to all kinds of datasets: Most objects can have various visual characteristics (size, colour, shape) or look different from different viewpoints}.
 Consequently, the digits and, thus, the activations look different for samples from the same class, and the use of more than one prototype per class seems helpful. Thus, instead of calculating the average activation per class, it could help to divide the activations per class into representative groups using a hierarchical clustering algorithm and to calculate the average activation (i.e. the cluster centre) per group. By doing so, multiple representative prototypes per class are obtained, and the prediction could become a lot more accurate.
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.49\textwidth]{digit_4_versions}
-    \caption[Different versions of the digit $4$ in the MNIST data set]{Different versions of the digit $4$ in the MNIST data set.}
+    \caption[Different versions of the digit ``$4$'' in the MNIST dataset]{Different versions of the digit ``$4$'' in the MNIST dataset.}
     \figlbl{digit_4_versions}
 \end{figure}
 
 
 The generated representations have so far only been examined for classification. However, since the objective function does not explicitly optimise the model for classification, it would be interesting to investigate what other information is contained in the representations. Furthermore, the representations are currently generated with a supervised approach since the labels are used in the loss function. However, the use of labels is generally not desirable because the manual creation of labels is labour-intensive. On the other hand, an unsupervised (or self-supervised) approach extracts features without labels. Moreover, it is known that the brain also functions unsupervised to a large extent and is thus biologically more plausible.
-Thus, the implementation of a loss function that does not rely on labels would be beneficial. Furthermore, the model should be tested on other data sets than MNIST to evaluate how well it can scale.
+Thus, the implementation of a loss function that does not rely on labels would be beneficial. Furthermore, the model should be tested on other datasets than MNIST to evaluate how well it can scale.
 
 The proposed vertical self-organisation approach uses a novel proxy objective function. Models based on proxy objective functions are biologically more plausible and a hot research topic (c.f. \secref{alt_train_algo}). Recently, many algorithms have been proposed, such as the forward-forward algorithm \sidecite{ff_algo}, which have caused a stir in the community by challenging the classical backpropagation of error as an optimisation algorithm. However, despite the fact that algorithms using proxy objective functions are biologically more plausible, these algorithms do not provide many benefits yet. Models trained with backpropagation of error are still superior, especially on well-known tasks such as classification. One of the author's hope was that such algorithms have other advantages, such as better robustness. However, evaluating the models presented in this work and other models, such as the forward-forward algorithm, has crushed this initial belief: No model that uses proxy objective function achieved better results on the corrupted MNIST-C dataset than end-to-end backpropagation of error
 
@@ -59,7 +59,7 @@ Von der Malsburg's theory refers to an image perception model with three stages 
 The stage S$1$ refers to the first stage, which is responsible for the extraction of features from images. In this stage, one fundamental principle is to avoid the ``fallacy of early commitment''. \sidecite{Marr_2010}.
 The idea is that local decisions should only be taken if plausible in the light of high-level features, while high-level features can only be defined based on low-level patterns.
 The brain can handle this very well, as the Gestalt psychology shows\sidenote{Gestalt psychology is about intelligent beings perceiving entire patterns, not individual components}. \sidecite{kohler1929gestalt}.
-Modern deep learning networks cannot deal with this and often recognise patterns in the first layers, committing to something specific that is something else in the light of the big picture. The core mechanism in the human brain to deal with this is, according to von der Malsburg, a mechanism based on lateral connections between neurons that are spatially close to each other. Initially, many neurons are activated by the retina's impulses. However, these neurons are immediately turned off if they do not have sufficient lateral support from neighbouring neurons. The lateral connections are thus there to support each other to remain active. This not only has the effect of ``mutually confirming each other'' but also helps to form higher-level features from low-level patterns: There are oscillations in the brain that also influence the number of active neurons. In other words, more neurons are constantly activated and then fewer again. Only those with the greatest local support remain if the number of active neurons is reduced. Thus, many neurons are deactivated in a short time. With each reduction in the number of active neurons, higher-level features are selected by supporting them (so-called network fragments) and remain.
+Modern deep learning networks cannot deal with this and often recognise patterns in the first layers, committing to something specific that is something else in the light of the big picture. The core mechanism in the human brain to deal with this is, according to von der Malsburg, a mechanism based on lateral connections between neurons that are spatially close to each other. Initially, many neurons are activated by the retina's impulses. However, these neurons are immediately turned off if they do not have sufficient lateral support from neighbouring neurons. The lateral connections are thus there to support each other to remain active. This not only has the effect of ``mutually confirming each other'' but also helps to form higher-level features from low-level patterns: There are oscillations in the brain that also influence the number of active neurons. In other words, more neurons are constantly activated and then fewer again. Only those with the greatest local support remain if the number of active neurons is reduced. Thus, many neurons are deactivated in a short time. With each reduction in the number of active neurons, higher-level features are selected by supporting them (so-called net fragments) and remain.
 Since these pixel groups keep each other active, neurons that represent insignificant features are continually switched off.
 
 The lateral support, however, is limited to local patterns, i.e. the lateral support in S$1$ is not sufficient to recognise whole objects or scenes, but only parts of them. In stage S$2$, however, these features are mapped to whole objects. These object representations in S$2$ are independent of transformation and position. Projection fibres do the mapping of several low-level features to a concrete object. These implicitly remove transformations and position information from the features and assemble them into objects. Projection fibres can be interpreted as a kind of graph that combines features hierarchically, ignoring local distortions to create transformation-independent object detection. Stage S$3$, on the other hand, stores very abstract prototypes of such objects, and by matching S$2$ and S$3$, the captured object instances can finally be d with the brain's memory.
