--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -1,24 +1,24 @@
 \small
 As soon as I have handed in this thesis and it has been assessed with a sufficient grade, I may use the title ``Master of Science''.
-Thus, I should ``master science'' or at least be able to work scientifically.
+Thus, I should ``master'' science or at least be able to work scientifically.
 Science can be defined as the systematic analysis of the real or virtual world through observations and experiments and the further development of existing technology.
 While this definition sounds straightforward, working successfully in science requires a lot of experience and commitment.
 I have been lucky enough to learn more about science and apply my knowledge in research projects at the Centre for Artificial Intelligence (CAI) of the Zurich University of Applied Sciences (ZHAW) since the beginning of my master's studies.
+Thus, I have learned to work scientifically on a daily basis, which is very beneficial for my future.
 I am also privileged to be supported and mentored by Prof. Dr. Thilo Stadelmann, Head of the CAI.
 He uses to say (also in accordance with his \href{https://stdm.github.io/Great-methodology-delivers-great-theses/}{blog-post}) ``Great methodology delivers great theses''.
-It is always desirable to have an excellent outcome in a thesis, such as a system that can execute a task and achieves or even overcomes state-of-the-art performance.
-However, it is equally or even more essential to reason why and how something works, to justify choices, and to show limitations.
-Moreover, scientific breakthroughs always require a little courage to try something completely new, even if this means that there may not be a desirable result in the end.
+It is always desirable to have an excellent outcome in a thesis.
+However, it is equally or even more important to reason why and how something works, to justify choices, and to show limitations.
+Moreover, scientific breakthroughs always require courage to try something completely new, even if this means that the work may not lead to outstanding results worth publishing.
 I write my thesis with these thoughts and hope readers can follow my reasoning (in contrast to neuronal networks, which are the subject of this thesis, but whose reasoning often cannot be followed).
 
-This thesis comprises two fields; computer science and neuroscience.
-I try to link these fields as clearly as possible and to write in a way such that readers from both disciplines can follow my argumentation.
+This thesis spans two fields; computer science and neuroscience.
+I try to link these fields as clearly as possible and to write in a way so that readers from both disciplines can follow my argumentation.
 However, this also means that some aspects are described rather extensively.
-So if you as a reader consider yourself a specialist in one of these fields, feel free to skip (parts of) like the ``Fundamentals'' in \chref{fundamentals
-}.
-In general, the chapter ``Fundamentals'' describes principles that are not necessary for understanding this thesis but are helpful for people with a deep learning background to gain an overview of the field of neurocomputing and vice versa.
+So if you as a reader consider yourself an expert in one of these fields, feel free to skip (parts of) the fundamentals in \chref{fundamentals}.
+In general, this chapter also describes principles that are not necessary for understanding this thesis but are helpful for people with a deep learning background to gain an overview of the field of neurocomputing and vice versa.
 
-I also want to thank colleagues and friends for supporting this thesis.
+At this point, I also want to thank colleagues and friends for supporting this thesis.
 First, I think of my mentor Prof. Dr. Thilo Stadelmann, who got me excited about AI years ago and later introduced me to research.
 He always encourages creative ideas, thinking outside the box, and striving for greatness.
 Thank you for your support, help, and guidance; I have grown personally and professionally.
